Remove for small screens one item of EBI footer navigation (logo) to gain space and avoid horizontal scroll

--- a/memi/memi-web/src/main/webapp/css/default.css
+++ b/memi/memi-web/src/main/webapp/css/default.css
@@ -1976,6 +1976,7 @@ div#local-masthead div.navbar-header {float:none;}
 @media (max-width: 768px) {  /*remove carousel, feedback, ebi search and sidebar nav for the about us for small screens*/
 .carousel, #feedback_div,  #global-search, #sidebar-nav {display: none;}
 div#local-title.logo-title img {width:100%; margin:0; padding: 18px 9px;} /*logo*/
+#global-footer .grid_4:nth-child(1) {display:none;}/*remove one item of the EBI bottom menu - logo -  to avoid scrolling effect*/
 }
 /*bootstrap menu*/
 @media (max-width: 768px){
